Updates css for connect list items to fix wrapping issues
More work to do here, just preliminary fixing of connect item wrapping. Listen option icons are next.

--- a/assets/scss/_base-dark.scss
+++ b/assets/scss/_base-dark.scss
@@ -25,12 +25,6 @@
 }
 
 @mixin connect_iconic_dark {
-	.connect-list-item {
-		p {
-			color: $links-dark;
-		}
-	}
-	
 	.listen-list {
 		.listen-option {
 			p {
